--- a/datetime/src/main/res/layout/md_datetime_picker_time.xml
+++ b/datetime/src/main/res/layout/md_datetime_picker_time.xml
@@ -105,7 +105,7 @@
 
     <TimePicker
             android:id="@+id/datetimeTimePicker"
-            style="@style/CustomTimePickerTheme"
+            android:theme="@style/testing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
