--- a/datetime/src/main/res/values/styles.xml
+++ b/datetime/src/main/res/values/styles.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CustomTimePickerTheme" parent="@android:style/Widget.Material.TimePicker">
-        <item name="android:headerBackground">?colorSecondary</item>
-        <item name="android:numbersTextColor">?colorOnPrimary</item>
-        <item name="android:numbersSelectorColor">?colorPrimary</item>
-        <item name="android:numbersBackgroundColor">?colorPrimaryDark</item>
-        <item name="android:amPmTextColor">?colorOnSecondary</item>
+    <!--<style name="testing" parent="Theme.MaterialComponents.NoActionBar">-->
+    <style name="testing">
+        <item name="android:textColorPrimary">#EEFFFFFF</item>
+        <item name="android:textColorSecondary">#99FFFFFF</item>
+        <item name="colorControlNormal">?attr/colorOnBackground</item>
+        <item name="android:textColorTertiary">?attr/colorOnBackground</item>
+        <item name="android:textColorPrimaryDisableOnly">?attr/colorOnBackground</item>
     </style>
 </resources>
