--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,6 @@
         <item name="android:background">?colorPrimary</item>
     </style>
 
-
-
     <style name="TabTest" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabTextColor">@color/tab_text_color</item>
         <item name="tabIconTint">?colorSecondary</item>
@@ -13,7 +11,15 @@
         <item name="tabIndicatorColor">?colorSecondary</item>
     </style>
 
+    <style name="CustomTimePickerTheme" parent="@android:style/Widget.Material.TimePicker">
+        <item name="android:headerBackground">?colorSecondary</item>
+        <item name="android:numbersBackgroundColor">?colorPrimaryDark</item>
+        <item name="android:numbersSelectorColor">?colorPrimary</item>
+        <item name="android:numbersTextColor">?colorOnPrimary</item>
+    </style>
+
     <style name="BaseTheme" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:timePickerStyle">@style/CustomTimePickerTheme</item>
         <item name="actionBarTheme">@style/ActionBarTheme</item>
         <item name="tabStyle">@style/TabTest</item>
         <item name="colorBackgroundFloating">?android:colorBackground</item>
