--- a/datetime/src/main/res/values/styles.xml
+++ b/datetime/src/main/res/values/styles.xml
@@ -7,5 +7,6 @@
         <item name="colorControlNormal">?attr/colorOnBackground</item>
         <item name="android:textColorTertiary">?attr/colorOnBackground</item>
         <item name="android:textColorPrimaryDisableOnly">?attr/colorOnBackground</item>
+        <item name="android:colorControlNormal">?attr/colorSurface</item>
     </style>
 </resources>
