Should have committed sooner :/ Included update support for lines, included snackbar system to provide feedback about reminders and favorites, added click debouncer in problematic locations, fixed problems related to fragment recreation on configuration change, improved behavior when user is outside of Zaragoza, almost finished More destination with a bunch of extra info, improved filtering, improved permission handling, implemented QR scanner system, improved empty states animations and layouts, fixed errors related to reminder notifications and some other smaller stuff

--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -62,6 +62,7 @@
                 android:textSize="18sp"/>
 
         <androidx.appcompat.widget.AppCompatButton
+                android:scrollbars="none"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:paddingStart="8dp"
@@ -77,6 +78,7 @@
                 />
 
         <androidx.appcompat.widget.AppCompatButton
+                android:scrollbars="none"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:paddingStart="8dp"
