--- a/app/src/main/res/layout/reminders_destination.xml
+++ b/app/src/main/res/layout/reminders_destination.xml
@@ -24,26 +24,36 @@
             android:id="@+id/no_reminders_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:lottie_rawRes="@raw/tumbleweed"
+            app:lottie_rawRes="@raw/reminders_lottie"
             app:lottie_loop="true"
             app:lottie_autoPlay="true"
+            app:lottie_scale="0.3"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"
+            app:layout_constraintBottom_toTopOf="@id/no_reminders_text"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_chainStyle="packed"
             android:visibility="gone"/>
 
     <TextView
             android:id="@+id/no_reminders_text"
+            android:textColor="?colorOnBackground"
             android:text="@string/no_reminders"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/no_reminders_animation"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textAppearance="@android:style/TextAppearance.Material.Headline"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:textAlignment="center"
+            app:layout_constraintHorizontal_bias="0.5"
             android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
