--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -1,75 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            tools:context="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/favorites_recycler_view"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swiperefresh"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:clipToPadding="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favorites_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="4dp"
+                    android:paddingBottom="4dp"
+                    android:clipToPadding="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-            android:id="@+id/no_data_text"
-            android:textColor="?colorOnBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_data_available"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone"
-            android:textAppearance="@android:style/TextAppearance.Material.Headline" android:textAlignment="center"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toTopOf="@+id/no_data_suggestions_text"
-            android:layout_marginBottom="16dp" app:layout_constraintVertical_chainStyle="packed"/>
-    <TextView
-            android:id="@+id/no_data_suggestions_text"
-            android:textColor="?colorOnBackground"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/no_data_available_suggestions"
-            android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone"
-            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/no_data_text" app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <!-- SHADOW BUGS ON ANDROID 9 :( -->
-    <!-- https://stackoverflow.com/questions/54646927/strange-shadow-behavior-during-alpha-animation -->
-    <!-- https://stackoverflow.com/questions/55815430/recyclerview-items-shadow-clipped-when-rv-alpha-is-less-than-1-0 -->
-    <com.leinardi.android.speeddial.SpeedDialView
-            android:id="@+id/stop_details_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/stop_details_no_data_animation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_rawRes="@raw/stop_lottie"
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true"
+                app:lottie_scale="0.3"
+                android:scaleType="centerCrop"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/stop_details_no_data_text"
+                android:visibility="gone"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintVertical_bias="0.2"/>
+
+        <TextView
+                android:id="@+id/stop_details_no_data_text"
+                android:text="@string/no_data_available"
+                android:textColor="?colorOnBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/stop_details_no_data_help"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/stop_details_no_data_animation"
+                android:visibility="gone"
+                android:layout_marginStart="8dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Headline"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintHorizontal_bias="0.5"
+                android:layout_marginTop="32dp"/>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/stop_details_no_data_help"
+                style="@style/Widget.AppCompat.ImageButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_help_outline_black_24dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintTop_toTopOf="@+id/stop_details_no_data_text"
+                app:layout_constraintBottom_toBottomOf="@+id/stop_details_no_data_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/stop_details_no_data_text"
+                android:visibility="gone"
+                android:layout_marginEnd="8dp"/>
+
+        <!--&lt;!&ndash; SHADOW BUGS ON ANDROID 9 :( &ndash;&gt;-->
+        <!--&lt;!&ndash; Not using alpha anymore here &ndash;&gt;-->
+        <!--&lt;!&ndash; https://issuetracker.google.com/issues/132569416 &ndash;&gt;-->
+        <!--<com.leinardi.android.speeddial.SpeedDialView-->
+                <!--android:id="@+id/stop_details_fab"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="bottom|end"-->
+                <!--android:layout_margin="16dp"-->
+                <!--app:layout_behavior="@string/speeddial_snackbar_behavior"-->
+                <!--app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"-->
+                <!--app:layout_constraintEnd_toEndOf="parent"-->
+                <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
