--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -24,27 +24,37 @@
             android:id="@+id/no_favorites_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:lottie_rawRes="@raw/tumbleweed"
+            app:lottie_rawRes="@raw/favorites_lottie"
             app:lottie_loop="true"
             app:lottie_autoPlay="true"
+            app:lottie_scale="0.3"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            android:visibility="gone"/>
+            app:layout_constraintBottom_toTopOf="@id/no_favorites_text"
+            android:visibility="gone"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintVertical_bias="0.2"
+            />
 
     <TextView
             android:id="@+id/no_favorites_text"
-            android:textColor="?colorOnBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/no_favorites"
-            app:layout_constraintTop_toBottomOf="@+id/no_favorites_animation"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="?colorOnBackground"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/no_favorites_animation"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:textAppearance="@android:style/TextAppearance.Material.Headline"
-            android:layout_marginTop="24dp"
-            android:visibility="gone"/>
+            android:layout_marginTop="32dp"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:visibility="gone"
+            android:textAlignment="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
