--- a/app/src/main/res/layout/more_destination.xml
+++ b/app/src/main/res/layout/more_destination.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,32 +7,161 @@
         android:layout_height="match_parent"
         tools:context="com.jorkoh.transportezaragozakt.destinations.more.MoreFragment">
 
-    <com.google.android.material.button.MaterialButton
-            android:id="@+id/themes_button"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Themes"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dark_map_switch"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-            android:text="Switch"
-            android:textColor="?colorOnSurface"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/dark_map_switch"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/themes_button"
-            app:layout_constraintHorizontal_bias="0.5"/>
+        <TextView
+                android:id="@+id/style"
+                android:text="Style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="36dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+                android:text="Dark Map"
+                android:textColor="?colorOnBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/dark_map"
+                app:layout_constraintTop_toBottomOf="@+id/style"
+                android:paddingStart="10dp"
+                android:padding="14dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:layout_marginTop="4dp"/>
+
+        <Switch
+                android:id="@+id/dark_map_switch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/dark_map"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/dark_map"
+                app:layout_constraintBottom_toBottomOf="@+id/dark_map"
+                android:layout_marginEnd="10dp"/>
+
+        <TextView
+                android:id="@+id/themes"
+                android:paddingStart="10dp"
+                android:padding="14dp"
+                android:text="Themes"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dark_map"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+        <TextView
+                android:id="@+id/settings"
+                android:text="Settings"
+                android:textColor="?colorOnBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/themes"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="18dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"/>
+
+        <TextView
+                android:id="@+id/first_setting"
+                android:padding="14dp"
+                android:paddingStart="10dp"
+                android:text="First Setting"
+                android:clickable="true"
+                android:layout_marginTop="4dp"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/settings"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+        <TextView
+                android:id="@+id/second_setting"
+                android:padding="14dp"
+                android:paddingStart="10dp"
+                android:text="Second Setting"
+                android:clickable="true"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/first_setting"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+        <TextView
+                android:id="@+id/about"
+                android:text="About"
+                android:textColor="?colorOnBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/second_setting"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="18dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"/>
+
+        <TextView
+                android:id="@+id/faq"
+                android:padding="14dp"
+                android:paddingStart="10dp"
+                android:text="F.A.Q."
+                android:clickable="true"
+                android:layout_marginTop="4dp"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/about"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+        <TextView
+                android:id="@+id/privacypolicy"
+                android:padding="14dp"
+                android:paddingStart="10dp"
+                android:text="Privacy Policy"
+                android:clickable="true"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/faq"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+        <TextView
+                android:id="@+id/open_source_libraries"
+                android:padding="14dp"
+                android:paddingStart="10dp"
+                android:text="Open Source Libraries"
+                android:clickable="true"
+                android:textColor="?colorOnBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/privacypolicy"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:focusable="true"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
