--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,5 @@
         <attr name="colorSecondary"/>
         <attr name="android:colorBackground"/>
     </declare-styleable>
+        <attr name="colorOnSnackbar"/>
 </resources>
