Preparing for release: code cleanup, removed logging, removed unused stuff, configured gradle, setup proguard rules to work with Moshi, setup gradle configs

--- a/app/src/main/res/navigation/more_destination.xml
+++ b/app/src/main/res/navigation/more_destination.xml
@@ -8,8 +8,7 @@
     <fragment
             android:id="@+id/more"
             android:name="com.jorkoh.transportezaragozakt.destinations.more.MoreFragment"
-            android:label="More"
-            tools:layout="@layout/more_destination">
+            android:label="More">
         <action
                 android:id="@+id/action_more_to_ThemePicker"
                 app:destination="@id/ThemePicker"/>
