--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -95,18 +95,32 @@
 
 
         <GridLayout
+                android:id="@+id/lines_layout_favorite"
                 android:layout_width="0dp"
                 android:columnCount="7"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
-                app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
+                app:layout_constraintEnd_toStartOf="@+id/number_text_favorite"
                 app:layout_constraintTop_toBottomOf="@+id/title_text_favorite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:orientation="horizontal"
-                android:id="@+id/lines_layout_favorite"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="4dp"/>
+
+        <TextView
+                android:id="@+id/number_text_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?colorOnSurface"
+                app:layout_constraintStart_toEndOf="@+id/lines_layout_favorite"
+                app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
+                app:layout_constraintTop_toBottomOf="@+id/title_text_favorite"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="4dp"
+                android:textAlignment="center"
+                />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
