--- a/app/src/main/res/layout/map_info_window_line.xml
+++ b/app/src/main/res/layout/map_info_window_line.xml
@@ -7,7 +7,7 @@
           android:background="@drawable/map_info_window_rounded_edges"
           style="@android:style/TextAppearance.Material.Small"
           android:textStyle="bold"
-          android:textColor="@color/colorLineText"
+          android:textColor="@color/kinda_white"
           android:textAlignment="center"
           android:layout_marginEnd="4dp"
           android:layout_marginBottom="4dp"
