Fixed no data message flashing when opening stop details screen

--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -61,7 +61,7 @@
             app:layout_constraintEnd_toStartOf="@+id/stop_details_no_data_help"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stop_details_no_data_animation"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_marginStart="8dp"
             android:textAppearance="@android:style/TextAppearance.Material.Headline"
             android:layout_marginEnd="4dp"
@@ -80,6 +80,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/stop_details_no_data_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/stop_details_no_data_text"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_marginEnd="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
