Added Espresso test for creating reminders, included link to GitHub on more destination

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -58,6 +58,12 @@
                 app:iconSpaceReserved="false"/>
 
         <Preference
+                app:key="@string/open_source_key"
+                app:title="@string/open_source_title"
+                app:summary="@string/open_source_summary"
+                app:iconSpaceReserved="false"/>
+
+        <Preference
                 app:key="@string/privacy_policy_key"
                 app:title="@string/privacy_policy_title"
                 app:iconSpaceReserved="false"/>
