--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">zaragoza.avanzagrupo.com</domain>
+        <domain includeSubdomains="true">api.consorciozaragoza.es</domain>
     </domain-config>
 </network-security-config>
