--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -6,6 +6,7 @@
         android:id="@+id/favorites_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="56dp"
         tools:context="com.jorkoh.transportezaragozakt.destinations.favorites.FavoritesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
